# ayder-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  oha.diff  pyproject.toml
.ayder/: release_2.1.0.md  release_notes_2.2.7.md  tester_to_PM_phase01.md  tester_to_PM_phase02.md  tester_to_PM_phase02_rework.md  tester_to_PM_phase03.md  tester_to_PM_phase05.md
.github/workflows/: ci.yml  python-package.yml
dev/04/: phase04_rework_complete.md
docs/: DEVELOPMENT.md  LLM_WORKFLOW.md  MEMORY_MANAGEMENT.md  PROJECT_STRUCTURE.md  README_AGENT_WORKFLOW.md  README_OLLAMA.md  TUI_DEVELOPMENT.md  TUI_SETUP.md  config.toml.example
docs/PROJECT/: PM_REWORK_PHASE02.md  PM_WORKFLOW.md
docs/REFACTOR/: ARCHITECT_PROMPT.md  DEVELOPER_PROMPT.md  PROJECT_MANAGERS_WORKFLOW.md  PROJECT_MANAGER_PROMPT.md  TESTER_PROMPT.md
docs/architecture/: codebase-analysis.md
poc/webview_tui/: README.md  launcher.py  terminal.html
src/ayder_cli/: .prompts.py.swp  __init__.py  __main__.py  banner.py  chat_loop.py  checkpoint_manager.py  cli.py  cli_callbacks.py  cli_runner.py  client.py  commands.py  config.py  console.py  fs_tools.py  logging_config.py  memory.py  notes.py  parser.py  path_context.py  process_manager.py  prompts.py  tasks.py  tui.py  tui_helpers.py  tui_theme_manager.py  ui.py  version.py
tests/: COVERAGE.md  manual_test_verbose.py  test_agentic_workflow.py  test_chat_loop.py  test_checkpoint_manager.py  test_cli.py  test_cli_callbacks.py  test_cli_file_stdin.py  test_cli_tui.py  test_client.py  test_client_v3.py  test_commands.py  test_config.py  test_config_coverage.py  test_context.py  test_diff_preview.py  test_env_manager.py  test_fs_tools.py  test_interaction.py  test_interaction_v2.py  test_logging_config.py  test_main.py  test_memory.py  test_message_contract.py  test_notes.py  test_parameter_aliasing.py  test_process_manager.py  test_runtime_factory.py  test_search_codebase.py  test_tasks.py  test_ui.py  test_ui_coverage.py
tests/agents/: test_agent_consolidated.py  test_agent_tools.py  test_callbacks.py  test_config.py  test_integration.py  test_queue.py  test_registry.py  test_run.py  test_runner.py  test_runner_provider_unavailable.py  test_summary.py  test_tool.py  test_worktree_helpers.py  test_worktree_isolation.py
tests/application/: test_agent_engine.py  test_engine_checkpoint.py  test_message_contract.py  test_runtime_factory.py  test_service_ui_decoupling.py  test_temporal_contract.py  test_wrapper_contracts.py
tests/client/: test_client.py  test_client_verbose_integration.py  test_main.py
tests/commands/: test_cli_file_stdin.py  test_dispatch.py  test_files_command.py  test_registry.py  test_system_commands.py  test_task_commands.py  test_tools_command.py
tests/convergence/: __init__.py  test_checkpoint_parity.py  test_execution_policy_parity.py  test_runtime_wiring.py  test_temporal_runtime_wiring.py  test_validation_path.py
tests/core/: test_cache_monitor.py  test_config.py  test_config_coverage.py  test_config_migration.py  test_config_provider_logging.py  test_config_retry.py  test_config_v2.py  test_context_manager.py  test_context_manager_factory.py  test_default_context_manager.py  test_default_context_manager_should_compact.py  test_ollama_context_manager.py  test_ollama_context_manager_cache_monitor.py  test_ollama_context_manager_max_history.py  test_parameter_aliasing.py  test_parser.py  test_session.py
tests/loops/: test_base.py  test_chat_loop_hook.py  test_chat_loop_tool_truncation.py
tests/providers/: test_glm_async.py  test_ollama_inspector.py  test_ollama_native.py  test_ollama_xml.py  test_ollama_xml_autoroute.py  test_ollama_xml_usage.py  test_orchestrator_capabilities.py  test_qwen_async.py  test_retry_classifier.py  test_retry_integration.py  test_retrying_provider.py
tests/services/: test_boundary.py  test_confirmation_policy.py  test_executor_integration.py  test_interaction_sink.py  test_llm.py  test_llm_gemini.py  test_llm_verbose.py  test_temporal_client.py  test_temporal_worker.py  test_temporal_workflow_service.py
tests/tools/: test_agent_notes.py  test_background_process_tool.py  test_bash_tool.py  test_dbs_tool.py  test_definition_discovery.py  test_di_injection.py  test_file_editor_hardening.py  test_impl.py  test_impl_coverage.py  test_note_tool.py  test_notes_api.py  test_path_security.py  test_plugin_api.py  test_plugin_github.py  test_plugin_loading.py  test_plugin_manager.py  test_plugin_status.py  test_python_editor.py  test_registry.py  test_registry_coverage.py  test_result.py  test_schemas.py  test_search_codebase.py  test_search_hardening.py  test_skill_tool.py  test_task_tool.py  test_tasks.py  test_temporal_tool.py  test_utils.py  test_virtualenv.py  test_web.py
tests/tui/: test_agent_list_screen.py  test_do_clear_coordination.py  test_input_box.py  (+13 more)
(+243 files in other folders)
