[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ayder-cli"
version = "0.7.2"
description = "Interactive AI agent chat client for local LLMs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "openai",
    "prompt-toolkit",
    "rich>=13.0.0",
    "textual>=0.50.0",
]

[project.scripts]
ayder = "ayder_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.5.0",      # Parallel execution
    "pytest-timeout>=2.2.0",     # Prevent hangs
    "pytest-instafail>=0.5.0",   # Fast feedback
    "pytest-sugar>=1.0.0",       # Better UI (optional)
]
